fix: fix errors in the unit test classes